modification in div
div tag is changed to h1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>First Example</title>
 </head>
 <body>
-    <div>Hello World from Zeeshan</div>
+    <h1>Hello World from Zeeshan</h1>
 </body>
 </html>
